[package]
name = "meta-data-export-image-exif-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
chrono = "0.4.15"
little_exif = "0.2.1"
kamadak-exif = "0.5.5"
filetime_creation = "0.1.6"
